# rust_stoic_quotes

./: Cargo.toml  Dockerfile
.cargo/: config.toml
.github/workflows/: general.yml
src/: handlers.rs  main.rs  models.rs
